--- a/scss/components/_button.scss
+++ b/scss/components/_button.scss
@@ -3,7 +3,7 @@
     background-color: #ed9b40;
     padding: 6px 18px;
     height: 40px;
-    width: 120px;
+    // width: 120px;
     font-size: 14px;
     font-weight: 600;
     color: #ffffff;
