--- a/scss/modules/_explore.scss
+++ b/scss/modules/_explore.scss
@@ -168,7 +168,7 @@
             vertical-align: middle;
             line-height: 60px;
             font-size: 14px;
-            color: 010101;
+            color: #010101;
             margin-left: 16px;
         }
 
