--- a/scss/modules/_explore.scss
+++ b/scss/modules/_explore.scss
@@ -6,7 +6,6 @@
     &__search {
         display: inline-block;
         height: 45px;
-        vertical-align: middle;
         border: 1px solid rgba(225, 225, 225, 0.5);
         border-radius: 3px;
         width: 80%;
@@ -20,6 +19,8 @@
             display: inline-block;
             width: 65px;
             height: 45px;
+            -webkit-box-shadow: 0 0 20px 1px rgba(0, 0, 0, 0.1), 0 2px 3px rgba(0, 0, 0, 0.15);
+            box-shadow: 0 0 20px 1px rgba(0, 0, 0, 0.1), 0 2px 3px rgba(0, 0, 0, 0.15);
             vertical-align: middle;
             margin-left: -6px;
             border-radius: 0 3px 3px 0;
