--- a/scss/components/_button.scss
+++ b/scss/components/_button.scss
@@ -7,6 +7,7 @@
     font-size: 14px;
     font-weight: 600;
     color: #ffffff;
+    text-align: center;
 
     &:hover {
         color: #ffffff !important;
