--- a/scss/modules/_ngo-details.scss
+++ b/scss/modules/_ngo-details.scss
@@ -104,5 +104,110 @@
             }
         }
 
+        &-total {
+            margin-bottom: 20px;
+
+            p {
+                &:first-child {
+                    text-align: center;
+                    font-size: 30px;
+                    color: #ed9b40;
+                    margin-bottom: 10px;
+                }
+
+                &:nth-child(2) {
+                    text-align: center;
+                    font-size: 14px;
+                    font-weight: 600;
+                }
+            }
+        }
+
     }
+
+    &__campaign {
+        background: #FFFFFF;
+        border: 1px solid rgba(225, 225, 225, 0.5);
+        box-sizing: border-box;
+        border-radius: 3px;
+        margin-bottom: 20px;
+        overflow: hidden;
+        padding: 20px;
+        position: relative;
+        transition: 0.3s all linear;
+        -moz-transition: 0.3s all linear;
+        -webkit-transition: 0.3s all linear;
+        -ms-transition: 0.3s all linear;
+        -o-transition: 0.3s all linear;
+
+        &-title {
+            font-size: 20px;
+            margin-bottom: 20px;
+            font-weight: 700;
+
+        }
+
+        &-heading {
+            font-weight: 600;
+            font-size: 20px;
+        }
+
+        &-info {
+            a {
+                color: #ed9b40;
+            }
+        }
+
+        &-button {
+            &-wrap {
+                margin-top: 20px;
+
+                .cta__button {
+                    padding: 0;
+                    line-height: 40px;
+                }
+            }
+
+        }
+
+        &-price {
+            margin-top: 10px;
+            font-size: 14px;
+            color: #949494;
+
+            span {
+                font-weight: 600;
+                color: #000000;
+                font-size: 18px;
+
+            }
+        }
+
+        &-share {
+            display: flex;
+            margin-left: auto;
+
+            svg {
+                width: 16px;
+                height: 16px;
+                margin-left: 5px;
+                fill: #949494;
+            }
+        }
+    }
+}
+
+.ui-progressbar .ui-progressbar-value {
+    margin: 0 !important;
+    background: #ed9b40;
+    border-radius: 4px;
+    border: none;
+}
+
+.progressbar {
+    height: 10px;
+    border-radius: 4px !important;
+    border: 1px solid #ed9b40 !important;
+    margin-bottom: 10px;
+    margin-top: 10px;
 }
