did donate page

--- a/scss/modules/_explore.scss
+++ b/scss/modules/_explore.scss
@@ -1,6 +1,9 @@
 .explore-ngo {
     &__body {
         padding: 100px 39px;
+
+        max-width: 1280px;
+        margin: 0 auto;
     }
 
     &__search {
