--- a/scss/modules/_ngo-details.scss
+++ b/scss/modules/_ngo-details.scss
@@ -111,7 +111,7 @@
                 &:first-child {
                     text-align: center;
                     font-size: 30px;
-                    color: #ed9b40;
+                    color: #419D78;
                     margin-bottom: 10px;
                 }
 
@@ -150,6 +150,7 @@
         &-heading {
             font-weight: 600;
             font-size: 20px;
+            line-height: 30px;
         }
 
         &-info {
@@ -165,6 +166,11 @@
                 .cta__button {
                     padding: 0;
                     line-height: 40px;
+                    border-radius: 4px;
+
+                    a {
+                        padding: 10px 100px;
+                    }
                 }
             }
 
@@ -192,6 +198,10 @@
                 height: 16px;
                 margin-left: 5px;
                 fill: #949494;
+
+                &:hover {
+                    fill: #ed9b40;
+                }
             }
         }
     }
@@ -199,7 +209,7 @@
 
 .ui-progressbar .ui-progressbar-value {
     margin: 0 !important;
-    background: #ed9b40;
+    background: #419D78;
     border-radius: 4px;
     border: none;
 }
@@ -207,7 +217,19 @@
 .progressbar {
     height: 10px;
     border-radius: 4px !important;
-    border: 1px solid #ed9b40 !important;
+    border: 1px solid #419D78 !important;
     margin-bottom: 10px;
     margin-top: 10px;
+}
+
+@media sceen and (max-width:767px) {
+    .ngo__campaign-title {
+        margin-top: 30px;
+    }
+}
+
+@media screen and (max-width:372px) {
+    .ngo__campaign-button-wrap .cta__button a {
+        padding: 0;
+    }
 }
