--- a/css/main.css
+++ b/css/main.css
@@ -577,7 +577,9 @@ body {
 
 /*MODULES*/
 .explore-ngo__body {
-  padding: 100px 39px; }
+  padding: 100px 39px;
+  max-width: 1280px;
+  margin: 0 auto; }
 
 .explore-ngo__search {
   display: inline-block;
@@ -796,7 +798,7 @@ body {
     .ngo__profile-total p:first-child {
       text-align: center;
       font-size: 30px;
-      color: #ed9b40;
+      color: #419D78;
       margin-bottom: 10px; }
     .ngo__profile-total p:nth-child(2) {
       text-align: center;
@@ -823,14 +825,18 @@ body {
     font-weight: 700; }
   .ngo__campaign-heading {
     font-weight: 600;
-    font-size: 20px; }
+    font-size: 20px;
+    line-height: 30px; }
   .ngo__campaign-info a {
     color: #ed9b40; }
   .ngo__campaign-button-wrap {
     margin-top: 20px; }
     .ngo__campaign-button-wrap .cta__button {
       padding: 0;
-      line-height: 40px; }
+      line-height: 40px;
+      border-radius: 4px; }
+      .ngo__campaign-button-wrap .cta__button a {
+        padding: 10px 100px; }
   .ngo__campaign-price {
     margin-top: 10px;
     font-size: 14px;
@@ -847,16 +853,123 @@ body {
       height: 16px;
       margin-left: 5px;
       fill: #949494; }
+      .ngo__campaign-share svg:hover {
+        fill: #ed9b40; }
 
 .ui-progressbar .ui-progressbar-value {
   margin: 0 !important;
-  background: #ed9b40;
+  background: #419D78;
   border-radius: 4px;
   border: none; }
 
 .progressbar {
   height: 10px;
   border-radius: 4px !important;
-  border: 1px solid #ed9b40 !important;
+  border: 1px solid #419D78 !important;
   margin-bottom: 10px;
   margin-top: 10px; }
+
+@media sceen and (max-width: 767px) {
+  .ngo__campaign-title {
+    margin-top: 30px; } }
+
+@media screen and (max-width: 372px) {
+  .ngo__campaign-button-wrap .cta__button a {
+    padding: 0; } }
+
+.donate__campaign {
+  max-width: 400px;
+  margin-top: 20px; }
+  .donate__campaign .ngo__campaign-heading {
+    margin-top: 30px; }
+
+.donate__back svg {
+  width: 12px;
+  height: 12px; }
+
+.donate__back span {
+  font-size: 12px;
+  font-weight: 600;
+  vertical-align: middle !important; }
+
+.donate__input, .donate__textarea {
+  width: 100%;
+  border-radius: 4px;
+  height: 50px;
+  border: 1px solid #adadad;
+  margin-bottom: 20px;
+  padding-left: 15px;
+  color: #000000;
+  font-size: 14px; }
+  .donate__input::placeholder, .donate__textarea::placeholder {
+    font-size: 12px;
+    color: #adadad; }
+  .donate__input-wrap, .donate__textarea-wrap {
+    display: flex;
+    border: 1px solid #adadad;
+    border-radius: 4px;
+    margin: 20px 0;
+    width: 60%; }
+    .donate__input-wrap input, .donate__textarea-wrap input {
+      width: 100%;
+      border: none;
+      border-radius: 4px;
+      padding-left: 30px;
+      font-size: 30px; }
+  .donate__input-currency, .donate__textarea-currency {
+    height: 70px;
+    padding: 0 12px;
+    border-right: 1px solid #ed9b40; }
+    .donate__input-currency p, .donate__textarea-currency p {
+      line-height: 75px;
+      font-size: 30px; }
+
+.donate__textarea {
+  padding: 15px;
+  height: 100px;
+  margin-bottom: 0; }
+
+.donate__sub-type-item {
+  background-color: #fff;
+  width: 50%;
+  border: 1px solid #419D78;
+  text-align: center; }
+  .donate__sub-type-item:first-child {
+    border-radius: 4px 0px 0px 4px; }
+  .donate__sub-type-item:nth-child(2) {
+    border-radius: 0px 4px 4px 0px; }
+
+.donate__sub-type-link {
+  color: #050609;
+  font-size: 14px;
+  padding: 13px 30px;
+  display: block; }
+  .donate__sub-type-link.active {
+    background-color: #419D78;
+    border: none;
+    color: #fff; }
+
+.donate__sub-wrap {
+  padding-top: 10px; }
+
+.donate__comment {
+  font-size: 18px;
+  font-weight: 600;
+  margin-bottom: 15px; }
+  .donate__comment-wrap {
+    min-height: 130px;
+    height: fit-content; }
+    .donate__comment-wrap .explore-ngo__individual-info {
+      margin-left: 50px; }
+
+@media screen and (max-width: 891px) {
+  .donate__campaign {
+    max-width: 320px; } }
+
+@media screen and (max-width: 854px) {
+  .donate__input-wrap {
+    width: 80%; } }
+
+@media screen and (max-width: 767px) {
+  .donate__block {
+    max-width: 400px; } }
