--- a/css/main.css
+++ b/css/main.css
@@ -990,7 +990,7 @@ body {
 .login__form {
   width: 400px;
   margin: 50px auto;
-  padding: 0 20px; }
+  padding: 0 10px; }
 
 .login__title {
   font-size: 45px;
@@ -1077,7 +1077,8 @@ body {
   letter-spacing: 0.4px;
   font-weight: normal; }
   .login__input::placeholder {
-    color: #000000; }
+    color: #c4c4c4;
+    font-weight: 200 !important; }
 
 .login__pw {
   position: relative;
@@ -1105,11 +1106,35 @@ body {
   font-size: 14px;
   color: #000000; }
   .login__ngtv a {
-    color: #ed9b40; }
+    color: #ed9b40;
+    font-weight: 600; }
     .login__ngtv a:hover {
       color: #ec830a; }
+
+.signup__title {
+  font-size: 40px; }
 
 @media screen and (max-width: 479px) {
   .login__form {
     width: 100%;
     padding: 0 10px; } }
+
+@media screen and (max-width: 390px) {
+  .signup__title,
+  .login__title {
+    font-size: 30px;
+    line-height: 45px; } }
+
+@media screen and (max-width: 360px) {
+  .login__google-button,
+  .login__facebook-button {
+    padding: 20px; }
+    .login__google-button span,
+    .login__facebook-button span {
+      line-height: 20px; } }
+
+@media screen and (max-width: 302px) {
+  .signup__title,
+  .login__title {
+    font-size: 24px;
+    line-height: 36px; } }
