--- a/scss/modules/_login.scss
+++ b/scss/modules/_login.scss
@@ -2,7 +2,7 @@
     &__form {
         width: 400px;
         margin: 50px auto;
-        padding: 0 20px;
+        padding: 0 10px;
     }
 
     &__title {
@@ -119,7 +119,8 @@
         font-weight: normal;
 
         &::placeholder {
-            color: #000000;
+            color: rgb(196, 196, 196);
+            font-weight: 200 !important;
         }
     }
 
@@ -156,6 +157,7 @@
 
         a {
             color: #ed9b40;
+            font-weight: 600;
 
             &:hover {
                 color: #ec830a;
@@ -164,9 +166,49 @@
     }
 }
 
+.signup {
+    &__title {
+        font-size: 40px;
+    }
+}
+
 @media screen and (max-width:479px) {
     .login__form {
         width: 100%;
         padding: 0 10px;
+    }
+}
+
+@media screen and (max-width:390px) {
+
+    .signup,
+    .login {
+        &__title {
+            font-size: 30px;
+            line-height: 45px;
+        }
+    }
+}
+
+@media screen and (max-width:360px) {
+
+    .login__google-button,
+    .login__facebook-button {
+        padding: 20px;
+
+        span {
+            line-height: 20px;
+        }
+    }
+}
+
+@media screen and (max-width:302px) {
+
+    .signup,
+    .login {
+        &__title {
+            font-size: 24px;
+            line-height: 36px;
+        }
     }
 }
