--- a/scss/modules/_explore.scss
+++ b/scss/modules/_explore.scss
@@ -16,6 +16,12 @@
         -webkit-box-shadow: 0 0 20px 1px rgba(0, 0, 0, 0.1), 0 2px 3px rgba(0, 0, 0, 0.15);
         box-shadow: 0 0 20px 1px rgba(0, 0, 0, 0.1), 0 2px 3px rgba(0, 0, 0, 0.15);
 
+        &::placeholder {
+            color: #000000;
+            font-size: 12px;
+            font-weight: normal;
+        }
+
         &-button {
             background-color: #ed9b40;
             position: relative;
