--- a/css/main.css
+++ b/css/main.css
@@ -525,8 +525,14 @@ body {
   padding-left: 54px;
   padding-right: 54px;
   z-index: 1; }
+  .navbar__header.login__nav {
+    -webkit-box-shadow: none;
+    box-shadow: none; }
   .navbar__header-item {
-    padding-left: 40px; }
+    padding-left: 40px;
+    align-self: center; }
+    .navbar__header-item .dropdown-toggle::after {
+      display: none; }
   .navbar__header-link {
     color: #000000 !important;
     font-size: 14px !important; }
@@ -534,6 +540,20 @@ body {
       color: rgba(0, 0, 0, 0.5) !important; }
   .navbar__header-button {
     margin-left: 40px; }
+
+.navbar__profile {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  overflow: hidden; }
+  .navbar__profile-dropdown {
+    font-size: 14px;
+    padding: 10px 20px; }
+    .navbar__profile-dropdown:hover {
+      background-color: #ed9b40;
+      color: #fff; }
+    .navbar__profile-dropdown-wrap {
+      border: 1px solid #ed9b40; }
 
 .navbar-light .navbar-toggler-icon {
   background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(237, 155, 64,1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E") !important; }
@@ -665,8 +685,8 @@ body {
   .explore-ngo__individual-second-row {
     margin-top: 65px !important; }
   .explore-ngo__individual:hover {
-    -webkit-box-shadow: 0 0 20px 1px rgba(0, 0, 0, 0.1), 0 2px 3px rgba(0, 0, 0, 0.15);
-    box-shadow: 0 0 20px 1px rgba(0, 0, 0, 0.1), 0 2px 3px rgba(0, 0, 0, 0.15); }
+    box-shadow: 6px 4px 20px rgba(0, 0, 0, 0.16);
+    -webkit-box-shadow: 6px 4px 20px rgba(0, 0, 0, 0.16); }
   .explore-ngo__individual-details {
     display: flex; }
     .explore-ngo__individual-details-picture {
@@ -880,11 +900,12 @@ body {
   border: none; }
 
 .progressbar {
-  height: 10px;
+  height: 10px !important;
   border-radius: 4px !important;
   border: 1px solid #419D78 !important;
   margin-bottom: 10px;
-  margin-top: 10px; }
+  margin-top: 10px;
+  align-self: center; }
 
 @media sceen and (max-width: 767px) {
   .ngo__campaign-title {
@@ -1161,3 +1182,145 @@ body {
   .login__title {
     font-size: 24px;
     line-height: 36px; } }
+
+.dashboard__header {
+  padding-top: 80px;
+  background-color: #fff;
+  height: 200px;
+  -webkit-box-shadow: 5px 1px 2px rgba(190, 190, 190, 0.5);
+  box-shadow: 5px 1px 2px rgba(190, 190, 190, 0.5); }
+  .dashboard__header-wrap {
+    padding-left: 15px;
+    padding-top: 40px; }
+    .dashboard__header-wrap h3 {
+      font-size: 28px;
+      font-weight: 700; }
+
+.dashboard__nav {
+  display: flex;
+  margin-top: 30px; }
+  .dashboard__nav-resp {
+    display: none; }
+
+.dashboard__items {
+  margin-right: 40px; }
+
+.dashboard__links {
+  color: #8b8b8b;
+  font-weight: 600;
+  padding-bottom: 3px; }
+  .dashboard__links.active, .dashboard__links:hover {
+    color: #000000;
+    border-bottom: 3px solid #ed9b40;
+    transition: border .4s ease-in-out; }
+
+.dashboard__overview {
+  padding: 50px;
+  max-width: 1280px;
+  margin: 0 auto; }
+
+.overview__earning {
+  background: #FFFFFF;
+  border: 1px solid rgba(225, 225, 225, 0.5);
+  box-sizing: border-box;
+  border-radius: 3px;
+  margin-bottom: 20px;
+  overflow: hidden;
+  padding: 20px;
+  position: relative;
+  transition: 0.3s all linear;
+  -moz-transition: 0.3s all linear;
+  -webkit-transition: 0.3s all linear;
+  -ms-transition: 0.3s all linear;
+  -o-transition: 0.3s all linear;
+  height: 200px; }
+  .overview__earning-col {
+    padding-left: 0; }
+  .overview__earning-link {
+    margin-right: 20px;
+    font-size: 12px;
+    padding-bottom: 3px; }
+    .overview__earning-link:last-child {
+      margin-right: 0; }
+    .overview__earning-link.active, .overview__earning-link:hover {
+      border-bottom: 3px solid #ed9b40;
+      transition: border .4s ease-in-out; }
+  .overview__earning-amt {
+    text-align: center;
+    line-height: 150px;
+    font-size: 40px; }
+
+.overview__top {
+  display: flex; }
+
+.overview__title {
+  font-size: 20px;
+  font-weight: 600;
+  margin-right: auto; }
+
+.overview__campgn {
+  margin-top: 20px; }
+  .overview__campgn-col {
+    padding-right: 0; }
+  .overview__campgn-heading {
+    color: #000000;
+    font-size: 18px;
+    font-weight: 600;
+    margin-bottom: 20px;
+    line-height: 20px; }
+  .overview__campgn-progress {
+    height: 7px !important;
+    border-radius: 4px !important;
+    border: 1px solid #419D78 !important;
+    margin-bottom: 10px;
+    margin-top: 10px;
+    align-self: center; }
+  .overview__campgn-individual {
+    box-shadow: 0 0 3px rgba(0, 0, 0, 0.16);
+    padding: 20px;
+    padding-bottom: 10px;
+    border-radius: 4px;
+    background-color: #fff;
+    transition: 0.3s all linear;
+    -moz-transition: 0.3s all linear;
+    -webkit-transition: 0.3s all linear;
+    -ms-transition: 0.3s all linear;
+    -o-transition: 0.3s all linear; }
+    .overview__campgn-individual:hover {
+      -webkit-box-shadow: 6px 4px 20px rgba(0, 0, 0, 0.16);
+      box-shadow: 6px 4px 20px rgba(0, 0, 0, 0.16); }
+    .overview__campgn-individual:first-child {
+      margin-top: 20px; }
+  .overview__campgn-price {
+    font-size: 12px;
+    color: #8b8b8b; }
+    .overview__campgn-price span {
+      color: #000000;
+      font-size: 14px;
+      font-weight: 600; }
+
+.overview-title {
+  margin-right: auto; }
+
+.overview-col {
+  padding-right: 0; }
+
+.dropdown-toggle::after {
+  vertical-align: middle;
+  margin-left: 1.255em; }
+
+@media screen and (max-width: 991px) {
+  .overview__earning-col,
+  .overview__campgn-col {
+    padding: 0; } }
+
+@media screen and (max-width: 500px) {
+  .dashboard__nav {
+    display: none; }
+  .dashboard__nav-resp {
+    display: block;
+    margin-top: 25px; } }
+
+@media screen and (max-width: 453px) {
+  .dashboard__overview {
+    padding: 50px 10px; } }
