--- a/scss/components/_navbar.scss
+++ b/scss/components/_navbar.scss
@@ -11,9 +11,19 @@
         padding-right: 54px;
         z-index: 1;
 
+        &.login__nav {
+            -webkit-box-shadow: none;
+            box-shadow: none;
+        }
+
 
         &-item {
             padding-left: 40px;
+            align-self: center;
+
+            .dropdown-toggle::after {
+                display: none;
+            }
         }
 
         &-link {
@@ -28,6 +38,28 @@
 
         &-button {
             margin-left: 40px;
+        }
+    }
+
+    &__profile {
+        width: 50px;
+        height: 50px;
+        border-radius: 50%;
+        overflow: hidden;
+
+
+        &-dropdown {
+            font-size: 14px;
+            padding: 10px 20px;
+
+            &:hover {
+                background-color: #ed9b40;
+                color: #fff;
+            }
+
+            &-wrap {
+                border: 1px solid #ed9b40;
+            }
         }
     }
 }
