--- a/scss/modules/_explore.scss
+++ b/scss/modules/_explore.scss
@@ -98,8 +98,9 @@
         }
 
         &:hover {
-            -webkit-box-shadow: 0 0 20px 1px rgba(0, 0, 0, 0.1), 0 2px 3px rgba(0, 0, 0, 0.15);
-            box-shadow: 0 0 20px 1px rgba(0, 0, 0, 0.1), 0 2px 3px rgba(0, 0, 0, 0.15);
+            box-shadow: 6px 4px 20px rgba(#000000, 0.16);
+            -webkit-box-shadow: 6px 4px 20px rgba(#000000, 0.16);
+            ;
         }
 
         &-details {
