--- a/scss/modules/_ngo-details.scss
+++ b/scss/modules/_ngo-details.scss
@@ -215,11 +215,12 @@
 }
 
 .progressbar {
-    height: 10px;
+    height: 10px !important;
     border-radius: 4px !important;
     border: 1px solid #419D78 !important;
     margin-bottom: 10px;
     margin-top: 10px;
+    align-self: center;
 }
 
 @media sceen and (max-width:767px) {
