--- a/scss/modules/_login.scss
+++ b/scss/modules/_login.scss
@@ -156,6 +156,7 @@
         margin-top: 20px;
         font-size: 18px;
         font-weight: normal;
+        line-height: 68px;
     }
 
     &__ngtv {
